Update 'n8wlru5y6-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:d4630c0ddef05a73579460155c53e94560b5c25d@sha256:1fc5517a5a03028a635eabbac071646c70eb2076cd233e0e9d87dc16af24b41c

--- a/components/n8wlru5y6-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/n8wlru5y6-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: n8wlru5y6-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:d4630c0ddef05a73579460155c53e94560b5c25d@sha256:1fc5517a5a03028a635eabbac071646c70eb2076cd233e0e9d87dc16af24b41c
+          name: container-image
